Add get by id endpoint
